--- a/css/foundation.scss
+++ b/css/foundation.scss
@@ -1,3 +1,7 @@
+---
+# Front matter comment to ensure Jekyll properly reads file.
+---
+
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
